<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="76dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/tv_name2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btClick"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/bt_click"
        app:layout_constraintBottom_toTopOf="@+id/btClear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/bt_clear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:gravity="end"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/etNumber2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_name3"
        app:layout_constraintBaseline_toBaselineOf="@+id/etNumber"
        app:layout_constraintEnd_toStartOf="@+id/etNumber" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_name4"
        app:layout_constraintBaseline_toBaselineOf="@+id/etNumber2"
        app:layout_constraintEnd_toStartOf="@+id/etNumber2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_name5"
        app:layout_constraintBaseline_toBaselineOf="@+id/etNumber3"
        app:layout_constraintEnd_toStartOf="@+id/etNumber3" />

    <TextView
        android:id="@+id/tvOutput"
        android:layout_width="186dp"
        android:layout_height="37dp"
        app:layout_constraintBottom_toTopOf="@+id/etNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.148" />

    <TextView
        android:id="@+id/tvOutput2"
        android:layout_width="264dp"
        android:layout_height="89dp"
        android:layout_marginTop="8dp"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/etNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOutput"
        app:layout_constraintVertical_bias="0.01" />

    <TextView
        android:id="@+id/tvOutput3"
        android:layout_width="189dp"
        android:layout_height="41dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/etNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOutput2"
        app:layout_constraintVertical_bias="0.029" />

    <TextView
        android:id="@+id/tvOutput4"
        android:layout_width="133dp"
        android:layout_height="59dp"
        android:layout_marginTop="8dp"
        android:text=" "
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/etNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOutput3"
        app:layout_constraintVertical_bias="0.086" />

    <TextView
        android:id="@+id/tvOutput5"
        android:layout_width="80dp"
        android:layout_height="64dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvOutput4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.858"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etNumber3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:gravity="end"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/btClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etNumber2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:gravity="end"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/etNumber3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="歳"
        app:layout_constraintBaseline_toBaselineOf="@+id/etNumber"
        app:layout_constraintStart_toEndOf="@+id/etNumber" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="cm"
        app:layout_constraintBaseline_toBaselineOf="@+id/etNumber2"
        app:layout_constraintStart_toEndOf="@+id/etNumber2" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="kg"
        app:layout_constraintBaseline_toBaselineOf="@+id/etNumber3"
        app:layout_constraintStart_toEndOf="@+id/etNumber3" />

</androidx.constraintlayout.widget.ConstraintLayout>